# hometap-takehome

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  config.py
src/api/: common.py
src/api/v1/: routes.py
src/integration/: house_canary.py
src/util/: requests.py
tests/: conftest.py  test_v1.py
